# javy

./: Makefile  README.md  dev.sh  full.wasm
.devcontainer/: devcontainer.json
.github/workflows/: build-assets.yml
crates/apis/: Cargo.toml
crates/apis/src/: api_config.rs  lib.rs
crates/apis/src/fs/: config.rs  fs.js  mod.rs
crates/apis/src/globals/: globals.js  mod.rs
crates/apis/src/http/: README.md  config.rs  http.js  mod.rs
crates/apis/src/node_red/: mod.rs  node_red.js
crates/apis/src/process/: mod.rs
crates/apis/src/stream_io/: mod.rs
crates/apis/src/trace_lock/: mod.rs  trace_lock.js
crates/cli/src/: commands.rs  exports.rs  main.rs
crates/cli/src/wasm_generator/: static.rs  transform.rs
crates/cli/tests/: integration_test.rs
crates/cli/tests/sample-scripts/: fs.js
crates/core/: Cargo.toml
crates/core/src/: execution.rs  main.rs  runtime.rs
crates/quickjs-wasm-rs/src/js_value/: qjs_convert.rs
crates/quickjs-wasm-sys/: build.rs
crates/quickjs-wasm-sys/quickjs/: quickjs.c
test_red/: 70-WJSON.logic.js  70.wasm  index.js  index2.js  kryptologic.js
