[package]
name = "javy-apis"
version = "1.1.0-alpha.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Configurable JavaScript runtime for WebAssembly"
homepage = "https://github.com/bytecodealliance/javy/tree/main/crates/apis"
repository = "https://github.com/bytecodealliance/javy/tree/main/crates/apis"
categories = ["wasm"]

[features]
console = []
random = ["dep:fastrand"]
stream_io = []
node_red = ['console']
trace_lock = []
text_encoding = []
process = []
fs = ['console']
http = ['console']

[dependencies]
anyhow = { workspace = true }
javy = { workspace = true }
fastrand = { version = "1.9.0", optional = true }
glob = "0.3"
regex = { version = "1", default-features = false }
# For http request
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
