[package]
name = "javy-apis"
version = "2.1.1-alpha.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Configurable JavaScript runtime for WebAssembly"
homepage = "https://github.com/bytecodealliance/javy/tree/main/crates/apis"
repository = "https://github.com/bytecodealliance/javy/tree/main/crates/apis"
categories = ["wasm"]

[features]
console = []
random = ["dep:fastrand"]
stream_io = []
node_red = ['console']
trace_lock = []
text_encoding = []
process = []
fs = ['console']
http = ['console']

[dependencies]
anyhow = { workspace = true }
fastrand = { version = "2.0.1", optional = true }
javy = { workspace = true }
glob = "0.3"
regex = { version = "1", default-features = false }
# For http request
hyper_wasi = { version = "0.15", features = ["full"]}
tokio_wasi = { version = "1.21", features = ["rt", "macros", "net", "time", "io-util"]}
# For url parsing
url = "2.4.1"