[package]
name = "javy-core"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "javy_core"
path = "src/main.rs"

[lib]
name = "javy_quickjs_provider"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
javy = { workspace = true }
javy-apis = { path = "../apis", features = ["console", "text_encoding", "random", "stream_io", "process", "fs", "http", "node_red"] }
once_cell = { workspace = true }
serde = "1.0.183"
serde_yaml = "0.9.25"

[features]
default = ['experimental_event_loop']
experimental_event_loop = []
